Add event templates

--- a/ksbc/templates/news/news_list.html
+++ b/ksbc/templates/news/news_list.html
@@ -42,7 +42,7 @@
             {% endfor %}
         </div> <!-- Eng blog posts list -->
 
-        {% include 'news/includes/paginator.html' %}
+        {% include 'includes/paginator.html' %}
     </div>
 </section>
 <!-- ======= End Blog Section ======= -->
