Edit links in template

--- a/ksbc/templates/about/index.html
+++ b/ksbc/templates/about/index.html
@@ -13,7 +13,7 @@
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                     laboris nisi ut aliquip ex ea commodo consequat.</p>
                     <a data-aos="fade-up" data-aos-delay="200" href="membership.html" class="btn-get-started">Apply for Membership</a> <br>
-                    <a data-aos="fade-up" data-aos-delay="200" href="login.html" class="btn-get-started">Login</a>
+                    <a data-aos="fade-up" data-aos-delay="200" href="{% url 'users:login' %}" class="btn-get-started">Login</a>
                 </div>
             </div>
         </div>
