--- a/ksbc/templates/about/our-structure.html
+++ b/ksbc/templates/about/our-structure.html
@@ -6,7 +6,7 @@
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
       <h2>Our Structure</h2>
       <ol>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="{% url 'about:index' %}">Home</a></li>
         <li>Our Structure</li>
       </ol>
     </div>
