--- a/ksbc/templates/about/what-we-do.html
+++ b/ksbc/templates/about/what-we-do.html
@@ -7,7 +7,7 @@
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
         <h2>What We Do</h2>
         <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'about:index' %}">Home</a></li>
             <li>What We Do</li>
         </ol>
     </div>
