--- a/ksbc/templates/includes/header.html
+++ b/ksbc/templates/includes/header.html
@@ -11,11 +11,11 @@
     <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
     <nav id="navbar" class="navbar">
       <ul>
-        <li><a href="index.html">About Us</a></li>
-        <li><a href="what_we_do.html">What We Do</a></li>
-        <li><a href="news.html">News</a></li>
+        <li><a href="{% url 'about:index' %}">About Us</a></li>
+        <li><a href="{% url 'about:what-we-do' %}">What We Do</a></li>
+        <li><a href="{% url 'news:news' %}">News</a></li>
         <li><a href="membership.html">Membership</a></li>
-        <li><a href="our_structure.html">Our Structure</a></li>
+        <li><a href="{% url 'about:our-structure' %}">Our Structure</a></li>
         <li><a href="https://www.flickr.com/">Photo Gallery</a></li>
         
         <li class="dropdown"><a href="#"><span>Dropdown</span> <i
