--- a/ksbc/templates/users/password_reset_form.html
+++ b/ksbc/templates/users/password_reset_form.html
@@ -6,10 +6,10 @@
 <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-      <h2>Sign Up</h2>
+      <h2>Password Reset</h2>
       <ol>
         <li><a href="{% url 'about:index' %}">Home</a></li>
-        <li>Sign Up</li>
+        <li>Password Reset</li>
       </ol>
 
     </div>
@@ -21,14 +21,13 @@
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
                 <div class="card block-bg-custom text-black" style="border-radius: 1rem;">
-                    
                     <div class="login-item card-body p-5 text-center">
                         {% load user_filters %}
                             {% if form.errors %}
                                 {% for field in form %}
-                                    {% for error in field.errors %}            
-                                        <div class="alert alert-danger">
-                                        {{ error|escape }}
+                                    {% for error in field.errors %}
+                                        <div class='alert alert-danger'>
+                                            {{ error|escape }}
                                         </div>
                                     {% endfor %}
                                 {% endfor %}
@@ -38,37 +37,28 @@
                                     </div>
                                 {% endfor %}
                             {% endif %}
-
                         <div class="mb-md-5 mt-md-4 pb-5">
                             <div class="text-center">
                             <img src="{% static 'img/ksbc_logo.png' %}"
                                 style="width: 100%;" alt="logo">
                             </div>
             
-                            <p class="text-black-50 mb-5 pt-5">Please fill out the form to register!</p>
-                            
-                            <form action='{% url 'users:signup' %}' method=POST>
+                            <p class="text-black-50 mb-5 pt-5">
+                                Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.
+                            </p>
+            
+                            <form action='{% url 'users:reset_password' %}' method=POST>
                                 {% csrf_token %}
-
-                                {% for field in form %}
-                                    <div class="form-outline form-white mb-4">
-                                        {{ field|addclass:'form-control'}}
-                                        <label class='form-label' for="{{ field.id_for_label }}">
-                                            {{ field.label }}
-                                            {% if field.field.required %}
-                                            <span class="required text-danger">*</span>
-                                            {% endif %}
-                                        </label>
-                                        <br>
-                                        {% if field.help_text %}
-                                            <small id="{{ field.id_for_label }}-help" class="form-text text-muted">
-                                                {{ field.help_text|safe }}
-                                            </small>
-                                        {% endif %}
-                                    </div>
-                                {% endfor %}
-                                <input type='submit' value='Signup' class='btn btn-outline-danger btn-lg px-5'>
-                            </form>                          
+                                <div class="form-group row my-3 p-3">
+                                    <input type="email" name="email" maxlength="254" class="form-control" required id="id_email">
+                                    <label for="id_email">
+                                        Адрес электронной почты
+                                        <span class="required text-danger">*</span>
+                                    </label>
+                                </div>
+            
+                                <input type='submit' value='Reset my password' class='btn btn-outline-danger btn-lg px-5'>
+                            </form>
                         </div>
                     </div>
                 </div>
