--- a/ksbc/templates/users/login.html
+++ b/ksbc/templates/users/login.html
@@ -22,42 +22,54 @@
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
                 <div class="card block-bg-custom text-black" style="border-radius: 1rem;">
                     <div class="login-item card-body p-5 text-center">
-                        {% if form.errors %}
-                            {% for field in form %}
-                                {% for error in field.errors %}
-                                    <div class='alert alert-danger'>
+                        {% load user_filters %}
+                            {% if form.errors %}
+                                {% for field in form %}
+                                    {% for error in field.errors %}
+                                        <div class='alert alert-danger'>
+                                            {{ error|escape }}
+                                        </div>
+                                    {% endfor %}
+                                {% endfor %}
+                                {% for error in form.non_field_errors %}
+                                    <div class="alert alert-danger">
                                         {{ error|escape }}
                                     </div>
                                 {% endfor %}
-                            {% endfor %}
-                            {% for error in form.non_field_errors %}
-                                <div class="alert alert-danger">
-                                    {{ error|escape }}
-                                </div>
-                            {% endfor %}
-                        {% endif %}
+                            {% endif %}
                         <div class="mb-md-5 mt-md-4 pb-5">
                             <div class="text-center">
                             <img src="{% static 'img/ksbc_logo.png' %}"
                                 style="width: 100%;" alt="logo">
                             </div>
             
-                            <p class="text-black-50 mb-5 pt-5">Please enter your login and password!</p>
+                            <p class="text-black-50 mb-5 pt-5">Please enter your email and password!</p>
             
-                            <div class="form-outline form-white mb-4">
+                            <form action='{% url 'users:login' %}' method=POST>
+                                {% csrf_token %}
 
-                                <input type="email" class="form-control form-control-lg" />
-                                <label class="form-label">Email</label>
-                            </div>
+                                {% for field in form %}
+                                    <div class="form-outline form-white mb-4">
+                                        {{ field|addclass:'form-control'}}
+                                        <label class='form-label' for="{{ field.id_for_label }}">
+                                            {{ field.label }}
+                                            {% if field.field.required %}
+                                            <span class="required text-danger">*</span>
+                                            {% endif %}
+                                        </label>
+                                        <br>
+                                        {% if field.help_text %}
+                                            <small id="{{ field.id_for_label }}-help" class="form-text text-muted">
+                                                {{ field.help_text|safe }}
+                                            </small>
+                                        {% endif %}
+                                    </div>
+                                {% endfor %}
             
-                            <div class="form-outline form-white mb-4">
-                                <input type="password" class="form-control form-control-lg" />
-                                <label class="form-label">Password</label>
-                            </div>
+                                <p class="small mb-5 pb-lg-2"><a class="text-black-50" href="{% url 'users:reset_password' %}">Forgot password?</a></p>
             
-                            <p class="small mb-5 pb-lg-2"><a class="text-black-50" href="#!">Forgot password?</a></p>
-            
-                            <button class="btn btn-outline-danger btn-lg px-5" type="submit">Login</button>
+                                <input type='submit' value='Login' class='btn btn-outline-danger btn-lg px-5'>
+                                </form>
                         </div>
             
                         <div>
