Add stripe and templates with the configurations

--- a/ksbc/templates/includes/header.html
+++ b/ksbc/templates/includes/header.html
@@ -14,7 +14,7 @@
         <li><a href="{% url 'about:index' %}">About Us</a></li>
         <li><a href="{% url 'about:what-we-do' %}">What We Do</a></li>
         <li><a href="{% url 'news:news' %}">News</a></li>
-        <li><a href="membership.html">Membership</a></li>
+        <li><a href="{% url 'membership:membership-list' %}">Membership</a></li>
         <li><a href="{% url 'about:our-structure' %}">Our Structure</a></li>
         <li><a href="https://www.flickr.com/">Photo Gallery</a></li>
         
