--- a/ksbc/templates/users/profile.html
+++ b/ksbc/templates/users/profile.html
@@ -42,20 +42,21 @@
                     <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">Edit Profile</button>
                   </li>
   
-                  <li class="nav-item">
-                    <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-settings">Settings</button>
-                  </li>
-  
-                  <li class="nav-item">
+                  {% comment %} <li class="nav-item">
                     <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password">Change Password</button>
                   </li>
-  
+   {% endcomment %}
                 </ul>
                 <div class="tab-content pt-2">
   
                   <div class="tab-pane fade show active profile-overview" id="profile-overview">
                     <h5 class="card-title">Profile Details</h5>
-  
+                    
+                    <div class="row">
+                        <div class="col-lg-3 col-md-4 label ">Username</div>
+                        <div class="col-lg-9 col-md-8">{{user.username}}</div>
+                      </div>
+
                     <div class="row">
                       <div class="col-lg-3 col-md-4 label ">Full Name</div>
                       <div class="col-lg-9 col-md-8">{{user.first_name}} {{user.last_name}}</div>
@@ -72,116 +73,75 @@
                     </div>
   
                     <div class="row">
-                      <div class="col-lg-3 col-md-4 label">Phone</div>
-                      <div class="col-lg-9 col-md-8"></div>
-                    </div>
-  
-                    <div class="row">
                       <div class="col-lg-3 col-md-4 label">Email</div>
                       <div class="col-lg-9 col-md-8">{{user.email}}</div>
                     </div>
-
+                    
+                    <h5 class='card-title'>Membership Details</h5>
+                    <div class='row'>
                     {% if user_membership %}
-                            <h5 class='card-title'>Membership Details</h2>
-                            <div class='row'>
-                                <div class="col-lg-3 col-md-4 label">Membership Type</div> 
-                                <div class="col-lg-9 col-md-8">{{ user_membership.membership.membership_type }}</div>
-                            </div>
-                            <div class='row'>
-                                <div class="col-lg-3 col-md-4 label">Price</div> 
-                                <div class="col-lg-9 col-md-8"> ${{ user_membership.membership.price }} per year</div>
-                            </div>
+                        <div class="col-lg-3 col-md-4 label">Membership Type</div> 
+                        <div class="col-lg-9 col-md-8">
+                            {% if user_subscription %}
+                                {% if user_subscription.active %}
+                                    {{ user_membership.membership.membership_type }} <small>since {{ user_subscription.get_created_date }}</small>
+                                    <p>Next payment due: {{ user_subscription.get_next_billing_date }}</p>
+                                    <a href='{% url 'membership:cancel' %}'>Cancel membership</a>
+
+                                {% else %}
+                                    <p>You don't have an active membership plan. Check them out here <a href='{% url 'membership:membership-list' %}'>Membership Plans</a></p>
+                                {% endif %} 
                             
+                            {% else %}
+                                    <p>You don't have an active membership plan. Check them out here <a href='{% url 'membership:membership-list' %}'>Membership Plans</a></p>
+                            {% endif %} 
                         </div>
-                    {% else %}
-                        <div class="container">
-                            <p>You do not have an active membership.</p>
-                        </div>
+                    </div>
                     {% endif %}
+                </div>
   
-                  </div>
-  
-                  <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
+                <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
   
                     <!-- Profile Edit Form -->
-                    <form>
-                      <div class="row mb-3">
-                        <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
-                        <div class="col-md-8 col-lg-9">
-                          <img src="assets/img/profile-img.jpg" alt="Profile">
-                          <div class="pt-2">
-                            <a href="#" class="btn btn-primary btn-sm" title="Upload new profile image"><i class="bi bi-upload"></i></a>
-                            <a href="#" class="btn btn-danger btn-sm" title="Remove my profile image"><i class="bi bi-trash"></i></a>
-                          </div>
+                    <form method="post">
+                        {% csrf_token %}
+                    
+                        <div class="row mb-3">
+                            <label for="{{ form.first_name.id_for_label }}" class="col-md-4 col-lg-3 col-form-label">First Name</label>
+                            <div class="col-md-8 col-lg-9">
+                                {{ form.first_name }}
+                            </div>
                         </div>
-                      </div>
-  
-                      <div class="row mb-3">
-                        <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Full Name</label>
-                        <div class="col-md-8 col-lg-9">
-                          <input name="fullName" type="text" class="form-control" id="fullName" value="Kevin Anderson">
+                        
+                        <div class="row mb-3">
+                            <label for="{{ form.last_name.id_for_label }}" class="col-md-4 col-lg-3 col-form-label">Last Name</label>
+                            <div class="col-md-8 col-lg-9">
+                                {{ form.last_name }}
+                            </div>
                         </div>
-                      </div>
-  
-                      <div class="row mb-3">
-                        <label for="about" class="col-md-4 col-lg-3 col-form-label">About</label>
-                        <div class="col-md-8 col-lg-9">
-                          <textarea name="about" class="form-control" id="about" style="height: 100px">Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga sequi sed ea saepe at unde.</textarea>
+
+                        <div class="row mb-3">
+                            <label for="{{ form.company_name.id_for_label }}" class="col-md-4 col-lg-3 col-form-label">Company</label>
+                            <div class="col-md-8 col-lg-9">
+                                {{ form.company_name }}
+                            </div>
                         </div>
-                      </div>
-  
-                      <div class="row mb-3">
-                        <label for="company" class="col-md-4 col-lg-3 col-form-label">Company</label>
-                        <div class="col-md-8 col-lg-9">
-                          <input name="company" type="text" class="form-control" id="company" value="Lueilwitz, Wisoky and Leuschke">
+                    
+                        <div class="row mb-3">
+                            <label for="{{ form.job_position.id_for_label }}" class="col-md-4 col-lg-3 col-form-label">Job Position</label>
+                            <div class="col-md-8 col-lg-9">
+                                {{ form.job_position }}
+                            </div>
                         </div>
-                      </div>
-  
-                      <div class="row mb-3">
-                        <label for="Job" class="col-md-4 col-lg-3 col-form-label">Job</label>
-                        <div class="col-md-8 col-lg-9">
-                          <input name="job" type="text" class="form-control" id="Job" value="Web Designer">
-                        </div>
-                      </div>
-  
-                      <div class="row mb-3">
-                        <label for="Country" class="col-md-4 col-lg-3 col-form-label">Country</label>
-                        <div class="col-md-8 col-lg-9">
-                          <input name="country" type="text" class="form-control" id="Country" value="USA">
-                        </div>
-                      </div>
-  
-                      <div class="row mb-3">
-                        <label for="Address" class="col-md-4 col-lg-3 col-form-label">Address</label>
-                        <div class="col-md-8 col-lg-9">
-                          <input name="address" type="text" class="form-control" id="Address" value="A108 Adam Street, New York, NY 535022">
-                        </div>
-                      </div>
-  
-                      <div class="row mb-3">
-                        <label for="Phone" class="col-md-4 col-lg-3 col-form-label">Phone</label>
-                        <div class="col-md-8 col-lg-9">
-                          <input name="phone" type="text" class="form-control" id="Phone" value="(436) 486-3538 x29071">
-                        </div>
-                      </div>
-  
-                      <div class="row mb-3">
-                        <label for="Email" class="col-md-4 col-lg-3 col-form-label">Email</label>
-                        <div class="col-md-8 col-lg-9">
-                          <input name="email" type="email" class="form-control" id="Email" value="k.anderson@example.com">
-                        </div>
-                      </div>
-  
-                      
-  
-                      <div class="text-center">
+                    
+                        <div class="text-center">
                         <button type="submit" class="btn btn-primary">Save Changes</button>
-                      </div>
+                        </div>
                     </form><!-- End Profile Edit Form -->
   
                   </div>
   
-                  <div class="tab-pane fade pt-3" id="profile-change-password">
+                  {% comment %} <div class="tab-pane fade pt-3" id="profile-change-password">
                     <!-- Change Password Form -->
                     <form>
   
@@ -212,7 +172,7 @@
                     </form><!-- End Change Password Form -->
   
                   </div>
-  
+   {% endcomment %}
                 </div><!-- End Bordered Tabs -->
   
               </div>
@@ -221,5 +181,4 @@
           </div>
         </div>
       </section>
-
 {% endblock content %}
